# The-Train

./: CMakeLists.txt
assets/shaders/: flat_shading.frag  flat_shading_2D.vert  flat_shading_3D.vert  phong_shading.frag  phong_shading.vert
examples/: example_1.json  example_2.json
include/: coord.hpp  draw_scene.hpp  render.hpp  vector.hpp  vector2d.hpp
shaders/: fg_shader.glsl  vx_shader.glsl
src/: draw_scene.cpp  main.cpp  render.cpp
